--- a/m_clone_coding/clone.css
+++ b/m_clone_coding/clone.css
@@ -2,28 +2,28 @@
     font-family: "NotoSansKR";
     font-weight: 700;
     src: url("fonts/NotoSansKR-Bold.woff2") format("woff2");
-  }
-  @font-face {
+}
+@font-face {
     font-family: "NotoSansKR";
     font-weight: 500;
     src: url("fonts/NotoSansKR-Medium.woff2") format("woff2");
-  }
-  @font-face {
+}
+@font-face {
     font-family: "NotoSansKR";
     font-weight: 400;
     src: url("fonts/NotoSansKR-Regular.woff2") format("woff2");
-  }
-  @font-face {
+}
+@font-face {
     font-family: "NotoSansKR";
     font-weight: 300;
     src: url("/static/fonts/NotoSansKR-Light.woff2") format("woff2");
-  }
-  @font-face {
+}
+@font-face {
     font-family: "NotoSansKR";
     font-weight: 100;
     src: url("/static/fonts/NotoSansKR-Thin.woff2") format("woff2");
-  }
-  * {
+}
+* {
     margin: 0;
     padding: 0;
     line-height: 1;
@@ -31,185 +31,23 @@
     font-family: "NotoSansKR", "Sans-serif";
     -webkit-font-smoothing: antialiased;
 }
-body{
-    background-color:#f5f5f5;
+body {
+    background-color: #f5f5f5;
 }
-.header {
-    min-width: 1080px;
-    font-size: 16px;
-}
-.base-nav-guest {
-    min-height: 65px;
-    background-color: #fff;
-    border-bottom: 1px solid #eee;
-}
-.header-service-nav {
-    padding-top: 9px;
-    padding-bottom: 9px;
-    border-bottom: 1px solid #eee;
-    display: flex;
+
+.container {
     width: 1080px;
     margin: 0 auto;
-}
-header.header .header-service-nav .container {
-    display: flex;
-}
-.container { 
-    width: 1080px;
-    margin: 0 auto;
-}
-.service-link {
-    display: flex;
-    gap: 4px;
-    cursor: pointer;
-}
-.service-name {
-    line-height: 20px;
-    width: 100%;
-    font-size: 12px;
-    font-weight: 400;
-}
-.divider {
-    width: 1px;
-    height: 12px;
-    background-color: #eee;
-    margin: 3px 12px 0px 12px;
-}
-.menu-inactive {
-    display: block;
-}
-.menu-active {
-    display: none;
-}
-header.header
-    .header-service-nav
-    .service-link.other-services
-    .service-name {
-    color: #9e9e9e;
 }
 a {
     text-decoration: none;
     color: #212121;
-}
-.nav-logo-wrapper {
-    width: 77px;
-    padding: 20px 0;
-    float: left;
-    margin-right: 24px;
-    font-size: 18px;
-    line-height: 20px;
-    text-indent: -9999em;
-    box-sizing: border-box;
-    background-size: 80px 20px;
-}
-.nav-logo {
-    width: 100%;
-    height: 24px;
-    background-image: url(https://www.wishket.com/static/renewal/img/global/wishket_logo.svg);
-}
-.left-nav {
-    display: flex;
-    gap: 4px;
-    float: left;
-}
-.left-nav-menu{
-    padding: 20px 12px;
-    display: flex;
-    cursor: pointer;
-    align-items: center
-}
-.text900 {
-    color: #212121;
-}
-.body-2{
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 400;
-}
-.pr-8{
-    padding-right: 8px;
-}
-.img-container{
-    display: flex;
-    align-items: center;
-    margin-left: 4px;
-}
-.drop-down-list{
-    display: none;
-    width: 200px;
-    border-radius: 8px;
-    background-color: #fff;
-    position: absolute;
-    margin-left: -12px;
-    z-index: 999;
-    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, .16);
-}
-.useguide{
-    background-image: -webkit-image-set
-        (url(https://www.wishket.com/static/renewal/img/global/gradient-bar-1.png) 1x,
-         url(https://www.wishket.com/static/renewal/img/global/gradient-bar-1@2x.png) 2x,
-         url(https://www.wishket.com/static/renewal/img/global/gradient-bar-1@3x.png) 3x);
-}
-.left-bar{
-    width: 8px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
-.menu-list{
-    padding: 9px 0;
-}
-.nav-divider{
-    margin: 25px 4px 0 4px;
-    height: 14px;
-    border-left: 1px solid #e0e0e0;
-    display: block;
-    float: left;
-    vertical-align: middle;
-}
-.right-nav{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    height: 64px;
-    position: relative;   
-}
-.log-in-section{
-    display: flex;
-    align-items: center;
-    padding: 8px 16px;
-    gap: 4px;
-}
-.sign-up-button{
-    margin-left: 12px;
-    display: flex;
-    padding: 8px 16px;
-    align-items: center;
-    border-radius: 8px;
-    color: #fff;
-    background: linear-gradient(180deg, #5db6d4, #369cc2 100%);
-    cursor: pointer;
-}
-.body-2-medium{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-}
-.container::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-.base-nav-guest::after{
-    display: table;
-    content: "";
-    clear: both;
 }
 
 #nav_advertisement {
     margin-top: 0;
     width: 100%;
     height: 80px;
-    
 }
 .advertisement.active {
     display: block;
@@ -218,13 +56,13 @@ a {
     background-size: auto 100%;
     padding: 0;
 }
-.gala{
+.gala {
     min-width: 1080px;
     height: auto;
     min-height: 70%;
 }
 
-form{
+form {
     display: block;
     unicode-bidi: isolate;
 }
@@ -246,51 +84,59 @@ form{
 }
 .wishket-select {
     left: 141px;
-    z-index: 12;
+    z-index: 1;
     top: 1px;
 }
-.text-search-box{
+.text-search-box {
     display: flex;
     float: right;
     position: relative;
+}
+.ui-select {
+    width: 140px;
+    text-align: left;
 }
 .project-search .container .search-header .text-search-box .text-search-type {
     width: 140px !important;
     min-width: 100px;
 }
-
+.theme-wishket {
+    outline: none;
+}
 .ui-select.theme-wishket {
     position: relative;
-    color: #616161;
     font-weight: 400;
     cursor: pointer;
     display: inline-block;
     line-height: 0;
-    -webkit-tap-highlight-color: transparent;
 }
-.project-search .container .search-header #inner_text_search_box .wishket-select .select-box {
+.project-search
+    .container
+    .search-header
+    #inner_text_search_box
+    .wishket-select
+    .select-box {
     border: none !important;
 }
-.ui-select.theme-wishket>.select-box {
+.ui-select.theme-wishket > .select-box {
     position: relative;
     padding: 8px 42px 8px 12px;
     background: #fff;
     font-size: 14px;
     border-radius: 4px;
     display: block;
-    transition: all .2s;
-    -webkit-transition: all .2s;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
-.ui-select.theme-wishket>.select-box>p.select-name {
+.ui-select.theme-wishket > .select-box > p.select-name {
     font-size: 14px;
     line-height: 24px;
     opacity: 1;
     overflow: hidden;
     word-break: keep-all;
     text-overflow: ellipsis;
-    transform: translateX(-236%);
 }
-.ui-select.theme-wishket>.select-box>i {
+.ui-select.theme-wishket > .select-box > i {
     position: absolute;
     right: 13px;
     top: 50%;
@@ -303,19 +149,15 @@ form{
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 3;
     top: 0;
     left: 0;
-
 }
 .select-dropdown {
-    opacity: 0;
-    visibility: hidden;
     position: absolute;
-    transition: all .3s, opacity .1s;
-    -webkit-transition: all .3s, opacity .1s;
+    transition: all 0.3s, opacity 0.1s;
+    -webkit-transition: all 0.3s, opacity 0.1s;
     top: 41px;
-    width: 100%;
+    width: 150px;
     border-radius: 4px;
     padding: 8px 0;
     border: 1px solid #e0e0e0;
@@ -324,11 +166,12 @@ form{
     background: #fff;
     max-height: 270px;
     overflow: auto;
+    display: none;
 }
 ul {
     list-style: none;
 }
-.ui-select.theme-wishket>.select-dropdown>li {
+.ui-select.theme-wishket > .select-dropdown > li {
     padding: 8px 16px;
     font-size: 14px;
     line-height: 24px;
@@ -347,7 +190,7 @@ ul li {
     margin: 0;
     padding-left: 152px;
 }
-.default-input-wishket.icon-right>input {
+.default-input-wishket.icon-right > input {
     display: block;
     border-radius: 4px;
     border: 1px solid #e0e0e0;
@@ -362,14 +205,14 @@ ul li {
 .project-search .container .search-header #inner_text_search_box .text-unit {
     opacity: 1 !important;
 }
-.default-input-wishket.icon-right>.text-unit {
+.default-input-wishket.icon-right > .text-unit {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     font-size: 14px;
     color: #9e9e9e;
-    transition: all .3s;
-    -webkit-transition: all .3s;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
     right: 12px;
 }
 .search-filter-group {
@@ -379,7 +222,7 @@ ul li {
     display: inline-flex;
     align-items: center;
     vertical-align: middle;
-    width: 775px;
+    width: 770px;
 }
 .btn-action-help-img.active {
     display: inline-block;
@@ -395,7 +238,7 @@ ul li {
     border: solid 1px #e0e0e0;
     background-color: #fff;
 }
-.btn-filter-action-chip{
+.btn-filter-action-chip {
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
@@ -420,12 +263,12 @@ button {
 }
 
 .search-filter-manage-group {
-    display:inline-block;
+    display: inline-block;
     text-align: right;
-    width: 300px;
+    width: 305px;
     vertical-align: middle;
 }
-.btn-search-action{
+.btn-search-action {
     color: #616161;
     font-weight: 500;
     font-size: 14px;
@@ -455,17 +298,17 @@ button {
     margin-top: -17px;
     margin-bottom: 24px;
 }
-.search-filter-wrapper-temp{
+.search-filter-wrapper-temp {
     border-top: none;
     margin-top: 16px;
     position: relative;
     width: 100%;
 }
-.search-filter-selected-viewer{
+.search-filter-selected-viewer {
     padding: 0;
     margin: 16px 0 0 0;
 }
-.mb32{
+.mb32 {
     margin-bottom: 32px;
 }
 .result-count-box {
@@ -475,23 +318,23 @@ button {
 .text700 {
     color: #424242;
 }
-.body-1{
+.body-1 {
     font-size: 16px;
     line-height: 26px;
     font-weight: 400;
 }
-.body-1-medium{
+.body-1-medium {
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
 }
-.result-sort-box{
+.result-sort-box {
     display: inline-block;
     position: relative;
     width: 396px;
     text-align: right;
 }
-.btn-exclude-closed{
+.btn-exclude-closed {
     margin-right: 24px;
 }
 .btn-sort-box {
@@ -500,10 +343,13 @@ button {
 .text600 {
     color: #616161;
 }
-.body-2{
+.body-2 {
     font-size: 14px;
     line-height: 24px;
     font-weight: 400;
+}
+.sort-btn-inactive-check {
+    display: none;
 }
 .sort-btn-inactive {
     display: inline-block;
@@ -523,13 +369,19 @@ button {
     flex-direction: column;
     border-radius: 8px;
     background-color: #fff;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.12);
     border: solid 1px transparent;
     margin-bottom: 12px;
 }
-.project-info-box-wrapper{
+.project-info-box-wrapper {
     display: flex;
     padding: 24px 24px 24px 32px;
+}
+/* 프로젝트에 마우스 가져다대면 나타나는 효과 */
+.project-info-box-wrapper:hover {
+    border: 1px solid black;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 .project-organic-info {
     display: inline-block;
@@ -551,6 +403,12 @@ button {
     border-color: #93dbc6;
     background-color: #ebfff9;
     color: #009c6f;
+}
+.new-mark {
+    border-color: #abe3f2;
+    background-color: #e8faff;
+    color: #369cc2;
+    margin-left: 8px;
 }
 .project-status-label .status-mark {
     display: flex;
@@ -579,7 +437,7 @@ button {
     display: flex;
     align-items: center;
 }
-.mb10{
+.mb10 {
     margin-bottom: 10px;
 }
 .budget {
@@ -590,10 +448,10 @@ button {
 .text700 {
     color: #424242;
 }
-.budget span{
+.budget span {
     margin-left: 10px;
 }
-.body-1-medium{
+.body-1-medium {
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
@@ -611,15 +469,15 @@ button {
     display: flex;
     align-items: center;
 }
-.body-1{
+.body-1 {
     font-size: 16px;
     line-height: 26px;
     font-weight: 400;
 }
-.term span{
+.term span {
     margin-left: 10px;
 }
-.project-category-or-role{
+.project-category-or-role {
     display: inline-block;
     padding-right: 16px;
 }
@@ -634,7 +492,7 @@ button {
     width: 14px;
     vertical-align: middle;
 }
-.project-field{
+.project-field {
     display: inline-block;
     padding-right: 16px;
 }
@@ -695,7 +553,7 @@ div.status-mark.with-img.with-img {
     margin-right: 2px;
     padding: 4px;
 }
-.divider{
+.divider {
     width: 1px;
     height: 14px;
     background-color: #eee;
@@ -720,12 +578,12 @@ div.status-mark.with-img.with-img {
 .text600 {
     color: #616161;
 }
-.body-3{
+.body-3 {
     font-size: 13px;
     line-height: 20px;
     font-weight: 400;
 }
-.text500{
+.text500 {
     color: #757575;
 }
 .location-data {
@@ -748,7 +606,7 @@ div.status-mark.with-img.with-img {
 .proposal-info {
     padding: 0 0 20px 16px;
 }
-.mb8{
+.mb8 {
     margin-bottom: 8px;
 }
 .info-detail img {
@@ -762,14 +620,13 @@ div.status-mark.with-img.with-img {
 }
 .minor-info {
     padding-bottom: 16px;
-    
+
     height: 34px;
 }
 .status-wrap {
     display: inline-block;
     vertical-align: top;
     margin-left: 16px;
-
 }
 .status-icon {
     display: inline-block;
@@ -778,7 +635,6 @@ div.status-mark.with-img.with-img {
 }
 .view-status:before {
     background-image: url(https://www.wishket.com/static/renewal/img/project/search/post-icon-view.png);
-
 }
 .status-icon:before {
     content: "";
@@ -792,7 +648,7 @@ div.status-mark.with-img.with-img {
 .status-icon {
     font-style: normal;
 }
-.tooltip-container{
+.tooltip-container {
     min-width: 200px;
 }
 .tooltip-container {
@@ -801,8 +657,8 @@ div.status-mark.with-img.with-img {
     text-align: left;
     visibility: hidden;
     opacity: 0;
-    transition: all .3s;
-    -webkit-transition: all .3s;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
     color: #616161;
     position: absolute;
     z-index: 999999;
@@ -814,10 +670,10 @@ div.status-mark.with-img.with-img {
 .text900 {
     color: #212121;
 }
-.text400{
+.text400 {
     color: #9e9e9e;
 }
-.caption-1{
+.caption-1 {
     font-size: 12px;
     line-height: 20px;
     font-weight: 400;
@@ -878,6 +734,7 @@ div.status-mark.with-img.with-img {
     display: inline-flex;
     align-items: center;
     font-style: normal;
+    margin-right: 10px;
 }
 .client-badge img {
     width: 14px;
@@ -885,4 +742,80 @@ div.status-mark.with-img.with-img {
     margin-right: 4px;
     display: inline-block;
     vertical-align: middle;
+}
+.project-tooltip {
+    display: inline-flex;
+    align-items: center;
+    margin-right: 10px;
+    font-style: normal;
+}
+.project-tooltip img {
+    width: 14px;
+    height: 14px;
+    margin-right: 4px;
+    display: inline-block;
+    vertical-align: middle;
+}
+.pagination {
+    display: block;
+    text-align: center;
+    line-height: 80px;
+}
+.pagination li {
+    display: inline-block;
+    cursor: pointer;
+}
+li:first-child > .page-link {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Crect width='32' height='32' rx='2'%3E%3C/rect%3E%3Cpath stroke='%239E9E9E' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.2' d='M19 10l-6 6 6 6'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+    text-indent: -999999px;
+    background-position: center;
+}
+.project-search .container .pagination li a {
+    cursor: pointer;
+}
+li:last-child > .page-link {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Crect width='32' height='32' rx='2'%3E%3C/rect%3E%3Cpath stroke='%239E9E9E' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.2' d='M13 22l6-6-6-6'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+    text-indent: -999999px;
+    background-position: center;
+}
+.page-link {
+    position: relative;
+    display: block;
+    font-size: 14px;
+    line-height: 30px;
+    min-width: 32px;
+    text-align: center;
+    padding: 0 8px;
+    font-weight: 500;
+    color: #616161;
+    text-decoration: none;
+    border: 1px solid transparent;
+}
+.page-link.active {
+    color: #3ba3c7;
+    border-color: #bdbdbd;
+    border-radius: 2px;
+}
+.sort-box-dropdown {
+    display: block;
+}
+.result-sort-box .sort-box-dropdown {
+    position: absolute;
+    width: 112px;
+    right: 0;
+    top: 40px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16);
+    border-radius: 4px;
+    z-index: 100;
+    display: none;
+}
+.btn-sort-box-dropdown {
+    display: block;
+    width: 100%;
+    padding: 8px 16px;
+    cursor: pointer;
 }
